# WSD25_Practice02

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  tox.ini
.github/workflows/: docker-build.yml
src/practice02/: __init__.py  constants.py  errors.py  main.py  state.py  utils.py
src/practice02/middleware/: logging_middleware.py  rate_limit_middleware.py
src/practice02/request/: motd_request.py  number_request.py  prime_check_request.py
src/practice02/response/: api_response.py  json_response.py
tests/: conftest.py  test_is_prime.py  test_motd.py  test_my_ip.py  test_root.py  test_special_number.py
