[project]
name = "practice02"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "types-pyyaml",
    "pytest-mypy-plugins",
    "pytest-cov",
    "pytest-xdist",
    "tox",
]

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = ["fastapi.*"]
ignore_missing_imports = true
